# MixFunn

./: .gitignore  .pre-commit-config.yaml  README.md  mixfunn.py  pyproject.toml
examples/burgers equation/: models.py  train.py
examples/damped harmonic oscillator/: models.py  train.py
examples/driven harmonic oscillator/: models.py  train.py
examples/infinite quantum well/: find_energies.py  models.py  train.py
