[project]
name = "MixFunn"
version = "0.1.1"
description = "Neural Network Architecture designed to solve differential equations with improved generalization and interpretability."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy==2.2.1",
    "torch==2.5.0",
    "black>=25.1.0",
    "black-macchiato",
    "pre-commit>=4.1.0",
    "matplotlib>=3.10.7",
]

